<resources>
    <string name="app_name">HourRegistrationApp</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">My calendar</string>
    <string name="menu_hours">My hours</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_addcompany">Add Company</string>
    <string name="server_client_id">1091513271790-n7dtefpfnqnv1rnk6vqmh76ng9hck5ul.apps.googleusercontent.com</string>
    <string name="Kies_text_registration">Choose a Company</string>
    <string name="registration_hint_password">Fill in a password</string>
    <string name="registration_text_password">Fill in password</string>
    <string name="registration_hint_name">Enter Company name</string>
    <string name="registration_text_info">The company password is used for new memberd of the Company. They get access by filling in the right password.</string>
    <string name="registration_text_name">Fill in Company name</string>
    <string name="registration_button_save">Save and back</string>
    <string name="registration_text_registration">Or add a company by clicking here</string>
    <string name="registration_save_button">Save And Continue</string>
    <string name="setup_string_title">Log in with your Google account</string>
    <string name="Popup_tile">No error title</string>
    <string name="popup_text">No error message</string>
    <string name="popup_button_text">OK</string>
    <string name="popup_title_text">text</string>
    <string name="popup_message_text">This is the error</string>
    <string name="main_popup_text">It is not possible to start this application without internet connection</string>
    <string name="main_popup_title">Error!</string>
    <string name="registration_popup_body">Loggin in your Google Account was not successful, please try again</string>
    <string name="main_popup_companyerrrortext">It was not possible to retrieve Companies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bekijk_mijn_projecten">Bekijk mijn projecten</string>
    <string name="mijn_gewerkte_uren">Mijn gewerkte uren</string>
    <string name="error_loginunsuccesfull">Login not Successful</string>
    <string name="add_project">Add project</string>
    <string name="add_a_project">Add a project</string>
    <string name="projectname">Projectname</string>
    <string name="projecttag">Projecttag</string>
    <string name="project">project</string>
    <string name="edit_a_project">Edit a project</string>
    <string name="edit_project">Edit project</string>
</resources>
