<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_ic"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hours"
            android:icon="@drawable/hours_ic"
            android:title="@string/menu_hours" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/projects_ic"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_ic"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/signoff_ic"
            android:title="@string/menu_logout" />
    </group>
</menu>
