<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar_menu_item"
            android:icon="@drawable/ic_view_agenda_blue_24dp"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_hours"
            android:icon="@drawable/ic_menu_clock"
            android:title="@string/menu_hours" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_menu_project"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
