<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hra.hourregistrationapp.Ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_projects"
            app:destination="@id/nav_projects" />
        <action
            android:id="@+id/action_nav_home_to_nav_hours"
            app:destination="@id/nav_hours" />
    </fragment>

    <fragment
        android:id="@+id/nav_hours"
        android:name="com.hra.hourregistrationapp.Ui.hours.HourFragment"
        android:label="@string/menu_hours"
        tools:layout="@layout/fragment_hours" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.hra.hourregistrationapp.Ui.projects.ProjectsFragment"
        android:label="@string/menu_projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_nav_projects_to_addProjectFragment"
            app:destination="@id/addProjectFragment" />
        <action
            android:id="@+id/action_nav_projects_to_editProjectFragment"
            app:destination="@id/editProjectFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hra.hourregistrationapp.Ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.hra.hourregistrationapp.Ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" >
        <action
            android:id="@+id/action_nav_logout_to_registerActivity"
            app:destination="@id/HomeActivity" />
    </fragment>
    <fragment
        android:id="@+id/addHourFragment"
        android:name="com.hra.hourregistrationapp.Ui.hours.AddHourFragment"
        android:label="fragment_add_hour"
        tools:layout="@layout/fragment_add_hour" />
    <activity
        android:id="@+id/HomeActivity"
        android:name="com.hra.hourregistrationapp.Ui.setup.MainActivity"
        android:label="@android:string/yes" />
    <fragment
        android:id="@+id/addProjectFragment"
        android:name="com.hra.hourregistrationapp.Ui.projects.AddProjectFragment"
        android:label="fragment_add_project"
        tools:layout="@layout/fragment_add_project" >
        <action
            android:id="@+id/action_addProjectFragment_to_nav_projects"
            app:destination="@id/nav_projects" />
    </fragment>
    <fragment
        android:id="@+id/editProjectFragment"
        android:name="com.hra.hourregistrationapp.Ui.projects.EditProjectFragment"
        android:label="fragment_edit_project"
        tools:layout="@layout/fragment_edit_project" >
        <action
            android:id="@+id/action_editProjectFragment_to_nav_projects"
            app:destination="@id/nav_projects" />
        <argument
            android:name="userID"
            app:argType="integer" />
        <argument
            android:name="projectTitle"
            app:argType="string" />
    </fragment>
</navigation>