<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:id="@+id/button_popup_cross"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/button_popup_sluiten"
        android:layout_width="219dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/popup_button_text" />

    <TextView
        android:id="@+id/text_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_popup_cross"
        android:layout_centerHorizontal="true"
        android:text="@string/popup_title_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_popup_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="4dp"
        android:padding="2dp"
        android:text="@string/popup_message_text"
        android:textAlignment="center" />
</RelativeLayout>